[package]
name = "domain-match-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aho-corasick= "0.7"
regex = "1.5"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "domain_match_benchmark"
harness = false
